[tool.poetry]
name = "neurojot"
version = "0.1.0"
description = "A second brain toolkit for Python"
authors = ["gpyga <nickolasgryga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
ipython = "^8.18.1"
chromadb = "^0.4.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
